--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jazzservices</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>WebHE</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>demo</name>
 
