--- a/.github/workflows/auto-testing.yml
+++ b/.github/workflows/auto-testing.yml
@@ -1,28 +1,25 @@
 name: Selenide Test Automation
 
 on:
-  # Trigger on push or PR to main branch
   push:
     branches:
       - main
   pull_request:
     branches:
       - main
-
-  # Schedule to run tests 3 times a day at 8 AM, 12 PM, and 4 PM UTC
   schedule:
-    - cron: '0 8,12,16 * * *'
+    - cron: '0 8,12,16 * * *'  # Runs at 8 AM, 12 PM, and 4 PM UTC daily
 
 jobs:
   test:
-    runs-on: ubuntu-latest  # Use the latest Ubuntu runner for tests
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
 
-    # Cache dependencies to speed up build process
     steps:
+      # Step 1: Check out the code
       - name: Check out code
         uses: actions/checkout@v2
 
-      # Cache Maven dependencies (or Gradle dependencies if using Gradle)
+      # Step 2: Cache Maven dependencies
       - name: Cache Maven dependencies
         uses: actions/cache@v2
         with:
@@ -31,54 +28,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      # Set up JDK (make sure to use the correct Java version, here using Java 11)
-      - name: Set up JDK 11
+      # Step 3: Set up JDK (adjust version as per pom.xml)
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'adoptopenjdk'
 
-      # Build the project using Maven (or Gradle if you're using it)
+      # Step 4: Build the project using Maven (skipping tests initially)
       - name: Build with Maven
         run: mvn clean install -DskipTests
 
-      # Run the tests
+      # Step 5: Run Selenide tests
       - name: Run Selenide tests
         run: mvn test
         env:
-          API_KEY: ${{ secrets.API_KEY }}  # Example of using secrets like API_KEY
+          API_KEY: ${{ secrets.API_KEY }}  # Example of using GitHub Secrets if required
 
-      # Upload test results (JUnit reports or Allure)
-      - name: Upload test results
-        uses: actions/upload-artifact@v2
-        with:
-          name: test-results
-          path: target/test-classes  # Modify based on your test report output location
-
-      # Generate Allure Report (optional)
-      - name: Generate Allure report
-        run: |
-          allure serve target/allure-results  # You need to have Allure installed for this step
-        continue-on-error: true  # Allow workflow to continue even if this step fails
-
-    # Optionally, add notifications on success/failure (e.g., via Slack or email)
-    notifications:
-      on_failure:
-        - name: Send Slack notification
-          uses: some-slack-action
-          with:
-            slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
-
-    # Matrix for running tests on different browsers (optional)
-    matrix:
-      browser: [chrome, firefox]
-    strategy:
-      matrix:
-        browser: [chrome, firefox]  # Run tests on both Chrome and Firefox
-
-      steps:
-        - name: Set up Selenium WebDriver for ${{ matrix.browser }}
-          run: |
-            # Custom setup for different browsers
-            # Add your WebDriver installation here (e.g., ChromeDriver, GeckoDriver)
-          continue-on-error: true
+      # Step 6: Upload test results
+      -
