--- a/.github/workflows/auto-testing.yml
+++ b/.github/workflows/auto-testing.yml
@@ -3,9 +3,11 @@ name: Run Selenide Scripts
 on:
   schedule:
     - cron: '0 8,12,16 * * *'  # Runs at 8 AM, 12 PM, and 4 PM UTC
+      workflow_dispatch:
 
 jobs:
   run-selenide:
+    JazzIslamWorldTest:
     runs-on: ubuntu-latest
 
     steps:
