--- a/.github/workflows/auto-testing.yml
+++ b/.github/workflows/auto-testing.yml
@@ -11,17 +11,23 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Install dependencies for Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget curl unzip
+          sudo apt-get install -y libx11-dev libxkbfile-dev libnss3 libgdk-pixbuf2.0-0 libdbus-1-3
+          sudo apt-get install -y libasound2 libatk1.0-0 libatk-bridge2.0-0 libxrandr2 libxss1 libgdk-pixbuf2.0-0
 
       - name: Set up Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '22'
 
-
       - name: Cache Maven dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
@@ -40,11 +46,10 @@ jobs:
         run: |
           if [ $? -eq 0 ]; then
             echo "Jazz Islam World is Working"
+            # Add additional commands to notify success, like sending a message to Slack or email.
+            exit 0  # Ensure the step is marked as successful
           else
             echo "Jazz Islam World is not Working"
+            # Add additional commands to notify failure, like sending an error message to Slack or email.
+            exit 1  # Marks the step as failed
           fi
-
-
-    
-
-
